--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -19,10 +19,12 @@ $allura: 'Allura', 'Times New Roman', cursive;
 $playfair: 'Playfair Display', 'Times New Roman', serif;
 $headerHeight: 170px;
 $textColor: #000;
+$black: #000;
 $headingColour: #755E37;
 $white: #ffffff;
 $mainColor: #755E37;
 $greyColor: #c0c0c0;
+$lightGrey: #dadada;
 $darkGreyColor: #484848;
 $autofillBackground: #B3A896;
 $greyLogoColour: #353535;
